# axum-yew-shuttle-app

./: .gitignore  README.md
backend/: .env  Cargo.toml  schema.sql  sqlx-data.json
backend/src/: api.rs  auth.rs  error.rs  lib.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: api.rs  article.rs  auth.rs  editor.rs  feed.rs  home.rs  login.rs  main.rs  profile.rs  route.rs  setting.rs
seeder/: Cargo.toml
seeder/src/: main.rs
