[package]
name = "realworld-axum-yew-shuttle"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
shuttle-aws-rds = { version = "0.8.0", features = ["postgres"] }
shuttle-service = { version = "0.8.0", features = ["web-axum"] }
shuttle-secrets = "0.8.0"
shuttle-static-folder = "0.8.0"
sync_wrapper = "0.1.1"

axum = { version = "0.6.1", features = ["headers"] }
axum-extra = { version = "0.4.2", features = ["spa"] }
# axum-macros = "0.3.0"

anyhow = "1.0.66"
argon2 = "0.4.1"
chrono = "0.4"
jsonwebtoken = { version = "8.2.0", default-features = false, features = [
    "use_pem",
] }
# jwt-simple = "0.11.2"
log = "0.4.17"
password-hash = "0.4.2"
rand = "0.8.5"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
slug = "0.1.4"
sqlx = { version = "0.6.2", features = [
    "postgres",
    "migrate",
    "chrono",
    "offline",
] }
thiserror = "1.0.37"
tower-http = { version = "0.3.5", features = ["fs", "compression-full"] }
tracing-subscriber = "0.3.16"
validator = { version = "0.16.0", features = ["derive", "unic"] }
