[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
gloo-net = "0.2.5"
gloo-storage = "0.2.2"
log = "0.4.17"
pulldown-cmark = "0.9.2"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.37"
validator = "0.16.0"
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.60", features = [
    "HtmlInputElement",
    "HtmlTextAreaElement",
] }
yew = { version = "0.20.0", features = ["csr"] }
yew-hooks = "0.2.0"
yew-router = "0.17.0"

[profile.release]
panic = 'abort'
lto = true
opt-level = 'z'
