[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
gloo-net = "0.5.0"
gloo-storage = "0.3.0"
log = "0.4.17"
pulldown-cmark = "0.11.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.37"
validator = "0.18.1"
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.60", features = [
    "HtmlInputElement",
    "HtmlTextAreaElement",
] }
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.2"
yew-router = "0.18.0"
reqwest = { version = "0.12.5", features = ["json"] }

[profile.release]
panic = 'abort'
lto = true
opt-level = 'z'
