[package]
name = "seeder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = { version = "0.4.23", features = ["serde"] }
fake = { version = "2.5.0", features = ["derive"] }
indicatif = "0.17.2"
rand = "0.8.5"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
slug = "0.1.4"
